<resources>
    <string name="app_name" translatable="false">FooPing</string>
    <string name="app_desc" translatable="false">…</string>

    <string name="btnNow" translatable="false">Send now</string>

    <string name="btnNowClicked" translatable="false">Pings away</string>

    <string name="prefDataSettings">Data sources</string>
    <string name="prefClientSettings" translatable="false">Client settings</string>
    <string name="prefServerSettings">Server settings</string>

    <string name="prefActionBattery">Battery info</string>
    <string name="prefActionConn">Network connection</string>
    <string name="prefActionLocGPS">Last GPS location</string>
    <string name="prefActionLocNet">Last Network location</string>
    <string name="prefActionWifi">WIFI scan</string>

    <string name="prefClientID" translatable="false">Client ID</string>
    <string name="prefSecretKey" translatable="false">Encryption key</string>

    <string name="prefServerName" translatable="false">Host</string>
    <string name="prefServerPort" translatable="false">Port</string>
</resources>
