<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        app:title="@string/prefDataSettings"
        app:iconSpaceReserved="false">

        <SwitchPreference
            app:defaultValue="true"
            app:iconSpaceReserved="false"
            app:key="ActionBattery"
            app:title="@string/prefActionBattery"/>

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="ActionConn"
            app:title="@string/prefActionConn"/>

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="ActionLocGPS"
            app:title="@string/prefActionLocGPS"/>

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="ActionLocNet"
            app:title="@string/prefActionLocNet"/>

        <SwitchPreference
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="ActionWifi"
            app:title="@string/prefActionWifi"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/prefClientSettings"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:key="ClientID"
            app:title="@string/prefClientID"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="SecretKey"
            app:title="@string/prefSecretKey"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/prefServerSettings"
        app:iconSpaceReserved="false">

        <EditTextPreference
            app:defaultValue=""
            app:key="Host"
            app:title="@string/prefServerName"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />

        <!-- TODO: inputType="number" no longer selects the numeric keyboard -->
        <EditTextPreference
            app:defaultValue=""
            app:key="Port"
            app:title="@string/prefServerPort"
            app:iconSpaceReserved="false"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>
</PreferenceScreen>
